multi arm setup

--- a/src/lerobot/robots/alohamini/web/index.html
+++ b/src/lerobot/robots/alohamini/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>LeRobot Web Control</title>
+    <title>AlohaMini Web Control</title>
     <style>
         body { font-family: sans-serif; display: flex; flex-direction: column; align-items: center; }
         #videos { display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px; margin-bottom: 20px; }
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <h1>LeRobot Web Control</h1>
+    <h1>AlohaMini Web Control</h1>
     <div id="status">
         <span>WebSocket: <span id="ws-status-light" class="status-light disconnected"></span><span id="ws-status">Disconnected</span></span> | 
         <span>Bridge: <span id="bridge-status-light" class="status-light disconnected"></span><span id="bridge-status">Disconnected</span></span> |
